# configs

./: README.md  hypr  install.lua  zellij
alacritty/: alacritty.yml
fish/: config.fish
foot/: foot.ini
fuzzel/: fuzzel.ini
ghostty/: config
greetd/: config.toml  regreet.toml
gtk-3.0/: settings.ini
hail-bar/: Cargo.toml
hail-bar/src/: main.rs
hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
kitty/: kitty.conf
mako/: config
niri/: config.kdl
nvim/: .gitignore  coc-settings.json  init.lua  init.vim  init.vim.bak  lazy-lock.json  lua  nothign.txt  nvim-pack-lock.json
nvim/after/ftplugin/: svelte.lua
nvim/lua/: autocmds.lua  compe.lua  custom_lua.lua  custom_telescope.lua  file-manager.lua  fm-globals.lua  fm-popup.lua  fm-theming.lua  global.lua  init.lua  install_lsp.lua  keymaps.lua  lsp.lua  nvim_cmp.lua  pack.lua  plugin-config.lua  plugins.lua  themes.lua
nvim/lua/config/: lazy.lua
nvim/lua/dap/: rust.lua
qutebrowser/: config.py
scripts/: colors  screenrecord.desktop  screenshot  screenshot.desktop
setup/: Dockerfile  docker-compose.yml
setup/scripts/: install.lua
sway/: alternative  config
tmux/: .tmux.conf
waybar/: config  config.sway  style.css
