[package]
name = "hail-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", ref = "master" }
iced = { version = "0.14.0", features = ["svg", "tokio"] }
chrono = "0.4.42"
tokio = { version = "1.48", features = ["fs", "process", "rt"] }
niri-ipc = { git = "https://github.com/niri-wm/niri.git", branch = "main" }
